--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <div class="col-md-6">
                   <div class="detail-box">
                     <h1>
-                      The Latest
+                      The Lates
                       <span>
                         Furniture
                       </span>
