--- a/index.html
+++ b/index.html
@@ -56,32 +56,31 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav  ">
               <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html"> About</a>
+                <a class="nav-link" href="#360"> 360 Degree</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="shop.html">Shop </a>
+                <a class="nav-link" href="#about"> About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="furniture.html"> Furniture </a>
+                <a class="nav-link" href="#videos"> Videos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact us</a>
+                <a class="nav-link" href="#treading"> Treading</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#shop"> Shop</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#contactus">Contact us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#testimonial">Testimonial</a>
               </li>
             </ul>
-            <div class="user_option">
-              <a href="">
-                <img src="images/user.png" alt="">
-                <span>
-                  Login
-                </span>
-              </a>
-              <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
-                <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
-              </form>
-            </div>
+
           </div>
           <div>
             <div class="custom_menu-btn ">
@@ -104,7 +103,7 @@
     </header>
     <!-- end header section -->
     <!-- slider section -->
-    <section class="slider_section ">
+    <section class="slider_section">
       <div class="play_btn">
         <a href="">
           <img src="images/play.png" alt="">
@@ -261,9 +260,227 @@
   </div>
 
 
+  <!-- 360  -->
+
+  <!-- about section -->
+  <!-- 
+  <section class="about_section layout_padding">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3">
+          <div class="detail-box">
+            <div class="heading_container">
+              <h2>
+                360 degree images
+              </h2>
+
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam
+            </p>
+            <a href="">
+              Read More
+            </a>
+          </div>
+        </div>
+        <div class="col-md-9">
+          <div class="detail-box">
+            <div class="heading_container">
+
+              <iframe width="100%" height="480px" src="https://poly.google.com/view/3O4JSs3URXt/embed?chrome=min"
+                frameborder="0" style="border:none;" allowvr="yes"
+                allow="vr; xr; accelerometer; magnetometer; gyroscope; autoplay;" allowfullscreen
+                mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
+            </div>
+          </div>
+
+        </div>
+      </div>
+  </section> -->
+
+  <section class="slider_section" id="360">
+    <!-- <div class="play_btn">
+      <a href="">
+        <img src="images/play.png" alt="">
+      </a>
+    </div> -->
+    <div class="number_box">
+      <div>
+        <ol class="carousel-indicators indicator-2">
+          <li data-target="#carouselExampleIndicatorsss" data-slide-to="0" class="active">01</li>
+          <li data-target="#carouselExampleIndicatorsss" data-slide-to="1">02</li>
+          <li data-target="#carouselExampleIndicatorsss" data-slide-to="2">03</li>
+          <li data-target="#carouselExampleIndicatorsss" data-slide-to="3">04</li>
+          <li data-target="#carouselExampleIndicatorsss" data-slide-to="3">05</li>
+          <li data-target="#carouselExampleIndicatorsss" data-slide-to="3">06</li>
+          <li data-target="#carouselExampleIndicatorsss" data-slide-to="3">07</li>
+
+
+        </ol>
+      </div>
+    </div>
+    <div class="container">
+      <div id="carouselExampleIndicatorsss" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators" style="padding-bottom: 130px;">
+          <li data-target="#carouselExampleIndicatorsss" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicatorsss" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicatorsss" data-slide-to="2"></li>
+          <li data-target="#carouselExampleIndicatorsss" data-slide-to="3"></li>
+          <li data-target="#carouselExampleIndicatorsss" data-slide-to="4"></li>
+          <li data-target="#carouselExampleIndicatorsss" data-slide-to="5"></li>
+          <li data-target="#carouselExampleIndicatorsss" data-slide-to="6"></li>
+
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="row">
+              <!-- <div class="col-md-3">
+                <div class="detail-box">
+                  <div class="heading_container">
+                    <h2>
+                      360 degree
+                      Banquet Hall
+                    </h2>
+                  </div>
+                </div>
+              </div> -->
+              <div class="col-md-12">
+                <div class="detail-box">
+                  <div class="heading_container">
+                    <iframe width="100%" height="480px" src="https://poly.google.com/view/3O4JSs3URXt/embed?chrome=min"
+                      frameborder="0" style="border:none;" allowvr="yes"
+                      allow="vr; xr; accelerometer; magnetometer; gyroscope; autoplay;" allowfullscreen
+                      mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item ">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="detail-box">
+                  <div class="heading_container">
+                    <iframe width="100%" height="480px" src="https://poly.google.com/view/29KHCS6chcs/embed?chrome=min"
+                      frameborder="0" style="border:none;" allowvr="yes"
+                      allow="vr; xr; accelerometer; magnetometer; gyroscope; autoplay;" allowfullscreen
+                      mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item ">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="detail-box">
+                  <div class="heading_container">
+                    <iframe width="100%" height="480px" src="https://poly.google.com/view/29KHCS6chcs/embed?chrome=min"
+                      frameborder="0" style="border:none;" allowvr="yes"
+                      allow="vr; xr; accelerometer; magnetometer; gyroscope; autoplay;" allowfullscreen
+                      mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item ">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="detail-box">
+                  <div class="heading_container">
+                    <iframe width="100%" height="480px" src="https://poly.google.com/view/8aSdQ4U3pqi/embed?chrome=min"
+                      frameborder="0" style="border:none;" allowvr="yes"
+                      allow="vr; xr; accelerometer; magnetometer; gyroscope; autoplay;" allowfullscreen
+                      mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item ">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="detail-box">
+                  <div class="heading_container">
+                    <iframe width="100%" height="480px" src="https://poly.google.com/view/8aSdQ4U3pqi/embed?chrome=min"
+                      frameborder="0" style="border:none;" allowvr="yes"
+                      allow="vr; xr; accelerometer; magnetometer; gyroscope; autoplay;" allowfullscreen
+                      mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item ">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="detail-box">
+                  <div class="heading_container">
+                    <iframe width="100%" height="480px" src="https://poly.google.com/view/4rG_-dCE-Jn/embed?chrome=min"
+                      frameborder="0" style="border:none;" allowvr="yes"
+                      allow="vr; xr; accelerometer; magnetometer; gyroscope; autoplay;" allowfullscreen
+                      mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item ">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="detail-box">
+                  <div class="heading_container">
+                    <iframe width="100%" height="480px" src="https://poly.google.com/view/djgQeWClZSc/embed?chrome=min"
+                      frameborder="0" style="border:none;" allowvr="yes"
+                      allow="vr; xr; accelerometer; magnetometer; gyroscope; autoplay;" allowfullscreen
+                      mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item ">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="detail-box">
+                  <div class="heading_container">
+                    <iframe width="100%" height="480px" src="https://poly.google.com/view/4KjCAY_k-Iz/embed?chrome=min"
+                      frameborder="0" style="border:none;" allowvr="yes"
+                      allow="vr; xr; accelerometer; magnetometer; gyroscope; autoplay;" allowfullscreen
+                      mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item ">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="detail-box">
+                  <div class="heading_container">
+                    <iframe width="100%" height="480px" src="https://poly.google.com/view/93I9jKRV4qR/embed?chrome=min"
+                      frameborder="0" style="border:none;" allowvr="yes"
+                      allow="vr; xr; accelerometer; magnetometer; gyroscope; autoplay;" allowfullscreen
+                      mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- end about section -->
+
+  <!-- end 360 -->
+
   <!-- about section -->
 
-  <section class="about_section layout_padding">
+  <section class="about_section layout_padding" id="about">
     <div class="container">
       <div class="row">
         <div class="col-md-6">
@@ -430,7 +647,7 @@
 
   <!-- discount section -->
 
-  <section class="slider_section">
+  <section class="slider_section" id="videos">
     <!-- <div class="play_btn">
       <a href="">
         <img src="images/play.png" alt="">
@@ -492,7 +709,7 @@
 
 
   <!-- end discount section -->
-  <section class="trending_section layout_padding">
+  <section class="trending_section layout_padding" id="treading">
     <div id="accordion">
       <div class="container">
         <div class="row">
@@ -622,7 +839,7 @@
   <!-- brand section -->
 
 
-  <section class="brand_section">
+  <section class="brand_section" id="shop">
     <div class="container">
       <div class="heading_container">
         <h2>
@@ -695,7 +912,7 @@
   <!-- end brand section -->
   <!-- contact section -->
 
-  <section class="contact_section layout_padding">
+  <section class="contact_section layout_padding" id="contactus">
     <div class="container ">
       <div class="heading_container">
         <h2 class="">
@@ -747,7 +964,7 @@
   <!-- end contact section -->
 
   <!-- client section -->
-  <section class="client_section layout_padding-bottom">
+  <section class="client_section layout_padding-bottom" id="testimonial">
     <div class="container">
       <div class="heading_container">
         <h2>
@@ -904,9 +1121,9 @@
               <div class="img-box">
                 <img src="images/envelope-white.png" width="18px" alt="">
               </div>
-              <p>
+              <a href="mailto:onfo@eyeview3d.com">
                 onfo@eyeview3d.com
-              </p>
+              </a>
             </div>
           </div>
         </div>
