--- a/shop.html
+++ b/shop.html
@@ -63,7 +63,7 @@
             </ul>
             <div class="user_option">
               <a href="">
-                <img src="images/user.png" alt="">
+                <img src="images/user.png" alt="logo">
                 <span>
                   Login
                 </span>
